--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <body>
     <button onclick="deactivate()">Deactivate</button>
     <button onclick="activate()">Activate</button>
+    <button onclick="manipulate()">Manipulate</button>
     <script type="module" src="src/main.js"></script>
     <script type="module">
       import { SVG } from '@svgdotjs/svg.js'
@@ -45,7 +46,15 @@
       }
 
       window.activate = () => {
+        paths.forEach(path => path.manipulate(false))
+        paths.forEach(path => path.pointSelect(false))
         paths.forEach(path => path.pointSelect())
+      }
+
+      window.manipulate = () => {
+        paths.forEach(path => path.manipulate(false))
+        paths.forEach(path => path.pointSelect(false))
+        paths.forEach(path => path.pointSelect().manipulate())
       }
 
       let pathsStroke = {color: '#666', width: 2};
@@ -53,27 +62,27 @@
       let g = canvas.group();
 
       g.text('curve (C)').move(40, 5)
-      paths.push(g.path('M10 50 C50 100 100 10 100 50').move(20, 40).stroke(pathsStroke).fill('none').pointSelect().manipulate());
+      paths.push(g.path('M10 50 C50 100 100 10 100 50').move(20, 40).stroke(pathsStroke).fill('none'));
 
       g.text('relative curve (c)').move(40, 150);
-      paths.push(g.path('M10 50 c50 100 100 10 100 50').move(20, 200).stroke(pathsStroke).fill('none').pointSelect());
+      paths.push(g.path('M10 50 c50 100 100 10 100 50').move(20, 200).stroke(pathsStroke).fill('none'));
 
       g.move(20, 50)
 
       g = canvas.group();
 
       g.text('curve (C), then smooth curve (S)');
-      paths.push(g.path('M10 80 C 40 10, 65 10, 95 80 S 150 150, 180 80').move(0, 60).stroke(pathsStroke).fill('none').pointSelect());
+      paths.push(g.path('M10 80 C 40 10, 65 10, 95 80 S 150 150, 180 80').move(0, 60).stroke(pathsStroke).fill('none'));
 
       g.text('curve (C), then 2 smooth curves (S)').move(0, 200);
-      paths.push(g.path('M10 80 C 40 10, 65 10, 95 80 S 150 150, 180 80 S240 10 280 80').move(0, 260).stroke(pathsStroke).fill('none').pointSelect());
+      paths.push(g.path('M10 80 C 40 10, 65 10, 95 80 S 150 150, 180 80 S240 10 280 80').move(0, 260).stroke(pathsStroke).fill('none'));
 
       g.text('smooth curve (S) on its own').move(0, 420)
-      paths.push(g.path('M10 80 S 150 150, 180 80').move(0, 460).stroke(pathsStroke).fill('none').pointSelect());
+      paths.push(g.path('M10 80 S 150 150, 180 80').move(0, 460).stroke(pathsStroke).fill('none'));
 
       g.text('relative curve (c), then').move(0, 570);
       g.text('relative smooth curve (s)').move(0, 590);
-      paths.push(g.path('M10 80 c 40 10, 65 10, 95 80 s 150 150, 180 80').move(0, 620).stroke(pathsStroke).fill('none').pointSelect());
+      paths.push(g.path('M10 80 c 40 10, 65 10, 95 80 s 150 150, 180 80').move(0, 620).stroke(pathsStroke).fill('none'));
 
       g.move(200, 5);
 
@@ -81,37 +90,39 @@
       g = canvas.group();
 
       g.text('quadratic curve (Q)');
-      paths.push(g.path('M10 80 Q 95 10 180 80').move(0, 80).stroke(pathsStroke).fill('none').pointSelect());
+      paths.push(g.path('M10 80 Q 95 10 180 80').move(0, 80).stroke(pathsStroke).fill('none'));
 
       g.text('quadratic curve (Q), then').move(0, 200);
       g.text('a smooth quadratic curve (T)').move(0, 220);
-      paths.push(g.path('M10 80 Q 52.5 10, 95 80 T 180 80').move(0, 280).stroke(pathsStroke).fill('none').pointSelect());
-      g.move(200, 5);
+      paths.push(g.path('M10 80 Q 52.5 10, 95 80 T 180 80').move(0, 280).stroke(pathsStroke).fill('none'));
+      g.move(100, 5);
 
       g.text('smooth quadratic curve (T) on its own').move(0, 420);
-      paths.push(g.path('M10 80 T 180 80').move(0, 460).stroke(pathsStroke).fill('none').pointSelect());
+      paths.push(g.path('M10 80 T 180 80').move(0, 460).stroke(pathsStroke).fill('none'));
 
       g.text('relative quadratic curve (q), then').move(0, 580);
       g.text('a relative smooth quadratic curve (t)').move(0, 600);
-      paths.push(g.path('M10 80 q 52.5 10, 95 80 t 180 80').move(0, 620).stroke(pathsStroke).fill('none').pointSelect());
+      paths.push(g.path('M10 80 q 52.5 10, 95 80 t 180 80').move(0, 620).stroke(pathsStroke).fill('none'));
 
       g.move(500, 5);
 
       g = canvas.group();
       g.text('arc (A)').move(150, 0)
-      paths.push(g.path('M10 180 A 80 50 0 1 1 140 180').move(0, 30).stroke(pathsStroke).fill('none').pointSelect());
-      paths.push(g.path('M10 180 A 80 50 0 0 1 140 180').move(300, 80).stroke(pathsStroke).fill('none').pointSelect());
-      paths.push(g.path('M10 180 A 80 50 0 1 0 140 180').move(0, 300).stroke(pathsStroke).fill('none').pointSelect());
-      paths.push(g.path('M10 180 A 80 50 0 0 0 140 180').move(300, 300).stroke(pathsStroke).fill('none').pointSelect());
+      paths.push(g.path('M10 180 A 80 50 0 1 1 140 180').move(0, 30).stroke(pathsStroke).fill('none'));
+      paths.push(g.path('M10 180 A 80 50 0 0 1 140 180').move(300, 80).stroke(pathsStroke).fill('none'));
+      paths.push(g.path('M10 180 A 80 50 0 1 0 140 180').move(0, 300).stroke(pathsStroke).fill('none'));
+      paths.push(g.path('M10 180 A 80 50 0 0 0 140 180').move(300, 300).stroke(pathsStroke).fill('none'));
       g.move(900, 0);
 
       g = canvas.group();
       g.text('arc (A) with rotation').move(150, -100)
-      paths.push(g.path('M10 180 A 80 50 30 1 1 140 180').move(0, -50).stroke(pathsStroke).fill('none').pointSelect());
-      paths.push(g.path('M10 180 A 80 50 30 0 1 140 180').move(300, -20).stroke(pathsStroke).fill('none').pointSelect());
-      paths.push(g.path('M10 180 A 80 50 30 1 0 140 180').move(0, 200).stroke(pathsStroke).fill('none').pointSelect());
-      paths.push(g.path('M10 180 A 80 50 30 0 0 140 180').move(300, 200).stroke(pathsStroke).fill('none').pointSelect());
+      paths.push(g.path('M10 180 A 80 50 30 1 1 140 180').move(0, -50).stroke(pathsStroke).fill('none'));
+      paths.push(g.path('M10 180 A 80 50 30 0 1 140 180').move(300, -20).stroke(pathsStroke).fill('none'));
+      paths.push(g.path('M10 180 A 80 50 30 1 0 140 180').move(0, 200).stroke(pathsStroke).fill('none'));
+      paths.push(g.path('M10 180 A 80 50 30 0 0 140 180').move(300, 200).stroke(pathsStroke).fill('none'));
       g.move(900, 450);
+
+      manipulate()
     </script>
   </body>
 </html>
